@@ -3,6 +3,10 @@
 #  Copyright (C) 2005   Gregory P. Smith (greg@electricrain.com)
 #  Licensed to PSF under a Contributor Agreement.
 
+import warnings
+warnings.warn("the md5 module is deprecated; use hashlib instead",
+                DeprecationWarning, 2)
+
 from hashlib import md5
 new = md5
 
